--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "outDir": "./data",
+    "rootDir": "./",
     "target": "es5",
     "lib": [
       "dom",
@@ -13,7 +15,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -21,6 +23,9 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
-, "workbox-config.js", "convert-manifest.js"  ]
+    "src",
+    "workbox-config.js",
+    "scripts/convert-manifest.js",
+    "scripts"
+  ]
 }
